// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Layout Grid Different Size Columns 1`] = `
<section>
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
        >
          12 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--11"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
        >
          11 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--1"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
        >
          1 column element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--10"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
        >
          10 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--2"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
        >
          2 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--9"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
        >
          9 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--3"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-7"
        >
          3 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--8"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-8"
        >
          8 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
        >
          4 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--7"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-10"
        >
          7 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--5"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-11"
        >
          5 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--6"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-12"
        >
          6 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--6"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
        >
          6 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--5"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
        >
          5 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--7"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
        >
          7 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--4"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
        >
          4 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--8"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
        >
          8 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--3"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
        >
          3 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--9"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-7"
        >
          9 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--2"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-8"
        >
          2 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--10"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
        >
          10 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--1"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-10"
        >
          1 column element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--11"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-11"
        >
          11 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-12"
        >
          12 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Layouts/Layout Grid Nesting 1`] = `


`;

<<<<<<< HEAD
exports[`Storyshots Layouts/Layout Grid No Gap 1`] = `
=======
exports[`Storyshots Layouts/Layout Grid Responsiveness 1`] = `
>>>>>>> feat: add new visual tests


`;

<<<<<<< HEAD
exports[`Storyshots Layouts/Layout Grid Offset 1`] = `
=======
exports[`Storyshots Layouts/Layout Grid Six Columns 1`] = `
>>>>>>> feat: add new visual tests


`;

<<<<<<< HEAD
exports[`Storyshots Layouts/Layout Grid Responsiveness 1`] = `
=======
exports[`Storyshots Layouts/Layout Grid Unequal Columns 1`] = `
>>>>>>> feat: add new visual tests


`;
